--- a/app/public/stylesheets/main.css
+++ b/app/public/stylesheets/main.css
@@ -94,3 +94,7 @@ body {
    z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
    cursor: pointer; /* Add a pointer on hover */
  }
+
+ .pagination {
+   flex-wrap: wrap;
+ }
