--- a/app/views/layout/head.jade
+++ b/app/views/layout/head.jade
@@ -1,3 +1,4 @@
+meta(name='viewport', content='width=device-width, initial-scale=0.8')
 link(rel='shortcut icon', type='image/jpg', href='/images/favicon.png')
 link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css')
 link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/admin-lte/3.0.5/css/adminlte.min.css')
