--- a/app/views/layout/js.jade
+++ b/app/views/layout/js.jade
@@ -20,4 +20,5 @@ script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/twitt
 script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js')
 script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment.min.js')
 script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.31/moment-timezone-with-data.js')
-script(type='text/javascript', src='/js/main.js')
+script(type='text/javascript', src='https://cdn.jsdelivr.net/npm/gasparesganga-jquery-loading-overlay@2.1.7/dist/loadingoverlay.min.js')
+script(type='text/javascript', src='/js/loading.js')
