--- a/app/views/users/add.jade
+++ b/app/views/users/add.jade
@@ -3,10 +3,9 @@ html
 		meta(charset='UTF-8')
 		title FEWS | Log in
 		meta(content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no', name='viewport')
-		link(href='/bootstrap/dist/css/bootstrap.css', rel='stylesheet', type='text/css')
-		link(href='/font-awesome/css/fontawesome.min.css', rel='stylesheet', type='text/css')
-		link(href='/adminlte/dist/css/adminlte.min.css', rel='stylesheet', type='text/css')
-		link(href='/adminlte/plugins/iCheck/square/blue.css', rel='stylesheet', type='text/css')
+		link(rel='stylesheet', href='https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css')
+		link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css')
+		link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/admin-lte/3.0.5/css/adminlte.min.css')
 	body(style='background-color:#d2d6de')
 			.col-md-4(style='margin: 0 auto;')
 				.card
@@ -65,12 +64,11 @@ html
 					// /.card-body
 				// /.card
 	// /.content
-	script(src='/adminlte/plugins/jquery/jquery.min.js')
-	script(src='/adminlte/plugins/bootstrap/js/bootstrap.bundle.min.js', type='text/javascript')
-	script(src='/adminlte/plugins/iCheck/icheck.min.js', type='text/javascript')
-	script(type='text/javascript', src='https://cdn.jsdelivr.net/npm/jquery-validation@1.19.1/dist/jquery.validate.js')
-	script(type='text/javascript', src="/jquery/dist/jquery.validate.min.js") 
-	script(type='text/javascript', src="/jquery/dist/additional-methods.min.js")
+	script(src='https://code.jquery.com/jquery-3.5.1.min.js')
+	script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.bundle.js')
+	script(type='text/javascript', src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js") 
+	script(type='text/javascript', src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/additional-methods.min.js")
+
 	script.
 		$(function() {
 			$.validator.setDefaults({
