--- a/app/views/weather.jade
+++ b/app/views/weather.jade
@@ -9,4 +9,4 @@ block content
 
 block script
 	script(src="https://kit.fontawesome.com/a076d05399.js")
-	script(src="/javascripts/weather.js")
+	script(src="/js/views/weather.js")
