--- a/app/views/admin/data.jade
+++ b/app/views/admin/data.jade
@@ -120,6 +120,8 @@ block script
         var dataSite= !{results}.dataSite
         var oldDps= !{results}.oldDps
         var newDps= !{results}.newDps
+        var oldDpcd= !{results}.oldDpcd
+        var newDpcd= !{results}.newDpcd
 
     script(src='/js/tableData.js')
     script(src='/js/views/dataAdmin.js')
