--- a/app/views/layout/sidebar.jade
+++ b/app/views/layout/sidebar.jade
@@ -25,7 +25,7 @@ aside.main-sidebar.sidebar-dark-light.elevation-4
             li.nav-item
               a#linknavbarsitea.nav-link(href="/site/331")
                 i.far.fa-circle.nav-icon
-                p Wawar
+                p Kedunggupit
            ul.nav.nav-treeview
             li.nav-item
               a#linknavbarsitea.nav-link(href="/site/221")
