--- a/app/views/layout/sidebar.jade
+++ b/app/views/layout/sidebar.jade
@@ -30,15 +30,15 @@ aside.main-sidebar.sidebar-dark-light.elevation-4
             li.nav-item
               a#linknavbarsitea.nav-link(href="/site/221")
                 i.far.fa-circle.nav-icon
-                p Katulampa
+                p SITE 1
             li.nav-item
               a#linknavbarsiteb.nav-link(href="/site/222")
                 i.far.fa-circle.nav-icon
-                p Depok
+                p SITE 2
             li.nav-item
               a#linknavbarsitec.nav-link(href="/site/223")
                 i.far.fa-circle.nav-icon
-                p Manggarai
+                p SITE 3
 
         li.nav-item.has-treeview#adminNav
           a#admin.nav-link(href='')
