--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -62,13 +62,13 @@ block content
                                     p Datetime
                                 td:.box
                                     i.fas.fa-water.w3-xlarge
-                                    p Tma
+                                    p Tma (cm)
                                 td:.box
                                     i.far.fa-calendar.alt.w3-xlarge
-                                    p Vair
+                                    p Vair (m/s)
                                 td:.box
                                     i.fas.fa-tint.w3-xlarge
-                                    p ch
+                                    p ch (mm)
                         tbody#plotTabel
         .col-md-6
             .card.card-primary.card-outline
@@ -93,16 +93,16 @@ block content
                     tbody
                         tr
                             thead.thead-dark
-                                th.dt time
+                                th.dt Jam
                         tr
                             thead.thead-dark
-                                th.tma.thead-dark TMA
+                                th.tma.thead-dark TMA (cm)
                         tr
                             thead.thead-dark
-                                th.vair Laju Air
+                                th.vair Laju Air (m/s)
                         tr
                             thead.thead-dark
-                                th.ch CH
+                                th.ch CH (mm)
 
 
     #myModal.modal.fade(role='dialog')
