--- a/app/views/site.jade
+++ b/app/views/site.jade
@@ -29,7 +29,7 @@ block content
 										span.info-box-icon.bg-warning
 											i.fas.fa-water
 										.info-box-content
-											span.info-box-text TMA
+											span.info-box-text TMA (cm)
 											span.info-box-number#postma
 											span.description-percentage.text-success
 												i.fas.fa-caret-up
@@ -39,7 +39,7 @@ block content
 										span.info-box-icon.bg-info
 											i.fas.fa-tint
 										.info-box-content
-											span.info-box-text Debit
+											span.info-box-text Vair (m/s)
 											span.info-box-number#posvair
 											span.description-percentage.text-success
 												i.fas.fa-caret-up
@@ -49,7 +49,7 @@ block content
 										span.info-box-icon.bg-success
 											i.fas.fa-cloud-showers-heavy
 										.info-box-content
-											span.info-box-text CH
+											span.info-box-text CH (mm)
 											span.info-box-number#posch
 											span.description-percentage.text-success
 												i.fas.fa-caret-up
@@ -65,16 +65,16 @@ block content
 					tbody
 						tr
 							thead.thead-dark
-								th.dt time
+								th.dt Jam
 						tr
 							thead.thead-dark
-								th.tma TMA
+								th.tma TMA (cm)
 						tr
 							thead.thead-dark
-								th.vair Laju Air
+								th.vair Laju Air (m/s)
 						tr
 							thead.thead-dark
-								th.ch CH
+								th.ch CH (mm)
 		.col-md-4
 			.card.card-outline.card-primary
 				.card-header
